# syscon

./: .gitmodules  CMakeLists.txt  README.md
Classic/: CMakeLists.txt  (+2 more)
classic/: CMakeLists.txt  Lowpassfilter1st.cpp  PidController.cpp  PidController.hpp  TestPidController.cpp  clock.hpp  differential.hpp  lowpassfilter.hpp
classic/.ccls-cache/@@home@harumo@program@cpp@controlive@classic/: @home@harumo@opt@clang+llvm-12.0.0-x86_64-linux-gnu-ubuntu-20.04@lib@clang@12.0.0@include@__stddef_max_align_t.h.blob  @home@harumo@opt@clang+llvm-12.0.0-x86_64-linux-gnu-ubuntu-20.04@lib@clang@12.0.0@include@limits.h.blob  @home@harumo@opt@clang+llvm-12.0.0-x86_64-linux-gnu-ubuntu-20.04@lib@clang@12.0.0@include@stdarg.h.blob  @home@harumo@opt@clang+llvm-12.0.0-x86_64-linux-gnu-ubuntu-20.04@lib@clang@12.0.0@include@stddef.h.blob  @home@harumo@opt@clang+llvm-12.0.0-x86_64-linux-gnu-ubuntu-20.04@lib@clang@12.0.0@include@stdint.h.blob  @usr@include@alloca.h.blob  @usr@include@armadillo.blob  @usr@include@armadillo_bits@BaseCube_bones.hpp.blob  @usr@include@armadillo_bits@BaseCube_meat.hpp.blob  @usr@include@armadillo_bits@Base_bones.hpp.blob  @usr@include@armadillo_bits@Base_meat.hpp.blob  @usr@include@armadillo_bits@Col_bones.hpp.blob  @usr@include@armadillo_bits@Col_meat.hpp.blob  @usr@include@armadillo_bits@CubeToMatOp_bones.hpp.blob  @usr@include@armadillo_bits@CubeToMatOp_meat.hpp.blob  @usr@include@armadillo_bits@Cube_bones.hpp.blob  @usr@include@armadillo_bits@Cube_meat.hpp.blob  @usr@include@armadillo_bits@GenCube_bones.hpp.blob  @usr@include@armadillo_bits@GenCube_meat.hpp.blob  @usr@include@armadillo_bits@GenSpecialiser.hpp.blob  (+892 more)
test/: CMakeLists.txt  test_clock.cpp  test_lowpass1.cpp  visual_test_scatter.cpp
tutorial/plot/: 01_scatter_simple_and_realtime.cpp  02_scatter_add_option.cpp  03_scatter_keep_opening_window.cpp  04_scatter_property.cpp  CMakeLists.txt  visual_test_scatter.cpp
(+25 files in other folders)
